--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url %}">ToDo</a>
+          <a class="navbar-brand" href="{%url 'home' %}">ToDo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -16,7 +16,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               
               <li class="nav-item">
-                <a class="nav-link" href="#">Create</a>
+                <a class="nav-link" href="{% url 'create' %}">Create</a>
               </li>
             
             </ul>
@@ -26,7 +26,7 @@
             </form>
           </div>
         </div>
-      </nav>, initial-scale=1.0">
+      </nav>
     <title>Document</title>
     
 </body>
