--- a/templates/create.html
+++ b/templates/create.html
@@ -3,29 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-    {% include 'navbar.html' % }
-    <h1>Create ToDos</h1>
-    <form action="" method="post">
-        {% csrf_token %}
-        <label for="title">Title</label>
-        <input type="text" name = "title" id = "title" required="True">
-        <br><br>
-        <label for="description">Description</label>
-        <textarea name="description" id="description" cols="30" rows="10" required="True"></textarea>
-        <br><br>
-        <label for="status">Status</label>
-        <select id="status" name="status">
-            <option value="Done">Done</option>
-            <option value="Not Done">Not Done</option>
+    {% include 'navbar.html' %}
+       
+    {% if method == 'post' %}
+        <form method="post">
+            {% csrf_token %}
+            <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input type="text" class="form-control" id="title" name="title" required="True">
             
-        </select>
-        <br><br>
-        <input type="submit">        
+            <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea class="form-control" id="description" rows="3" name="description" required="True"></textarea>
+            </div>
 
-    </form>
+            <div class="mb-3">
+                <label for="Select" class="form-label">Status</label>
+                <select id="Select" class="form-select" name="Status">
+                <option>Done</option>
+                <option>Not Done</option>
+                </select>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    {% endif %}
+    {% if method == 'edit' %}
+        <form method="post" to="{% url 'edit' pk=object.id %}">
+            {% csrf_token %}
+            <div class="mb-3">
+            <label for="title" class="form-label" >Title</label>
+            <input type="text" class="form-control" id="title" name="title" required="True" value="{{ object.title }}">
+            
+            <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea class="form-control" id="description" rows="3" name="description" required="True">{{ object.description }}</textarea>
+            </div>
+
+            <div class="mb-3">
+                <label for="Select" class="form-label">Status</label>
+                <select id="Select" class="form-select" name="Status" value = {{object.status}}>
+                <option value="Done" {% if object.status == "Done" %}selected{% endif %}>Done</option>
+                <option value="Done" {% if object.status == "Not Done" %}selected{% endif %}>Not Done</option>
+                </select>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    {% endif %}
 
 </body>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
 </html>
